# OpenCoreAnalysisKit

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NOTICE  README.md  VERSION  build.sh  build_macos.sh  capstone.sh  capstone_macos.sh
.github/workflows/: cmake-android-platform.yml  cmake-macos-platform-rel.yml  cmake-macos-platform.yml  cmake-multi-platform.yml  cmake-ubuntu-platform-rel.yml  cmake-ubuntu-platform.yml  cmake-windows-platform.yml  release-android-platform.yml  release-macos-platform.yml  release-ubuntu-platform.yml
android/: android.cpp  android.h  basic.cpp  dalvik_vm_bytecode.h
android/art/base/: bit_memory_region.cpp  bit_memory_region.h  bit_table.cpp  bit_table.h  bit_utils.h  bit_vector.h  enums.h  globals.h  leb128.h  length_prefixed_array.cpp  length_prefixed_array.h  mem_map.cpp  mem_map.h  memory_region.cpp  memory_region.h
android/art/dex/: compact_dex_file.cpp  compact_dex_file.h  descriptors_names.cpp  descriptors_names.h  dex_file.cpp  dex_file.h  dex_file_structs.cpp  dex_file_structs.h  dex_file_types.h  modifiers.cpp  modifiers.h  primitive.cpp  primitive.h  standard_dex_file.cpp  standard_dex_file.h  utf.cpp  utf.h
android/art/dexdump/: dexdump.cpp  dexdump.h
android/art/runtime/: art_field.cpp  art_field.h  art_method.cpp  art_method.h  cache_helpers.cpp  cache_helpers.h  class_linker.cpp  class_linker.h  class_status.h  handle_scope.cpp  handle_scope.h  image.cpp  image.h  indirect_reference_table.cpp  indirect_reference_table.h  java_frame.cpp  java_frame.h  lock_word.cpp  lock_word.h  managed_stack.cpp  managed_stack.h  monitor.cpp  monitor.h  monitor_pool.cpp  monitor_pool.h  nterp_helpers.cpp  nterp_helpers.h  oat.cpp  oat.h  oat_quick_method_header.cpp  oat_quick_method_header.h  runtime.cpp  runtime.h  runtime_globals.h  stack.cpp  stack.h  thread.cpp  thread.h  thread_list.cpp  thread_list.h  (+3 more)
android/fdtrack/: fdtrack.cpp  fdtrack.h
android/logcat/: LogBuffer.cpp  LogBuffer.h  LogStatistics.cpp  LogStatistics.h  SerializedData.cpp  SerializedData.h  SerializedLogBuffer.cpp  SerializedLogBuffer.h  event_logtags.cpp  event_logtags.h  log.cpp  log.h
android/properties/: prop_area.cpp  prop_area.h  prop_info.cpp  prop_info.h  property.cpp  property.h
android/sdk/native/: android_BpBinder.cpp  android_BpBinder.h  android_os_BinderProxy.cpp  android_os_BinderProxy.h
android/tombstone/: parser.h  tombstone.cpp  tombstone.h
android/unwindstack/: Unwinder.cpp  Unwinder.h
cmake/: EmbedFile.cmake
compat/linux/: elf.h
core/api/: bridge.cpp  bridge.h  core.cpp  core.h  dwarf.cpp  dwarf.h  elf.cpp  elf.h  memory_ref.h  thread.h  unwind.cpp  unwind.h
core/arm/: core.cpp  core.h  thread_info.cpp  thread_info.h  unwind.cpp  unwind.h
core/arm/inst/: constant.h
core/arm64/: core.cpp  core.h  thread_info.cpp  thread_info.h  unwind.cpp  unwind.h
core/arm64/inst/: constant.h
core/common/: auxv.cpp  auxv.h  bit.h  block.h  elf.cpp  elf.h  exception.h  file.h  fpregset.h  link_map.cpp  link_map.h  load_block.cpp  load_block.h  native_frame.cpp  native_frame.h  note_block.cpp  note_block.h  prstatus.h  syment.h  tls.h  ucontext.h
core/common/disassemble/: capstone.cpp  capstone.h
core/common/xz/: codec.cpp  codec.h  lzma.cpp  lzma.h
core/lp32/: core.cpp  core.h
core/lp64/: .core.cpp.swp  core.cpp  core.h
core/riscv64/: core.cpp  core.h  thread_info.cpp  thread_info.h  unwind.cpp  unwind.h
core/x64/: core.cpp  core.h  thread_info.h
core/x86/: core.cpp  core.h  thread_info.cpp  thread_info.h  unwind.cpp  unwind.h
core/x86_64/: core.cpp  core.h  thread_info.cpp  thread_info.h  unwind.cpp  unwind.h
ini/: current.ini  google_aosp_sdk36_64.ini  ini.cpp  ini.h
llvm/: llvm.cpp  llvm.h
llvm/cxx/: deque.cpp  deque.h  list.cpp  list.h  map.cpp  map.h  mutex.cpp  mutex.h  set.cpp  set.h  split_buffer.cpp  split_buffer.h  string.cpp  string.h  unordered_map.cpp  unordered_map.h  unordered_set.cpp  unordered_set.h  vector.cpp  vector.h
llvm/scudo/standalone/: chunk.h  secondary.cpp  secondary.h
parser/: core_parser.cpp  env.h
parser/command/: cmd_auxv.cpp  cmd_auxv.h  cmd_class.cpp  cmd_class.h  cmd_core.cpp  cmd_core.h  cmd_cxx.cpp  cmd_cxx.h  cmd_debug.cpp  cmd_debug.h  cmd_dex.cpp  cmd_dex.h  cmd_disassemble.cpp  cmd_disassemble.h  cmd_dumpsys.cpp  cmd_dumpsys.h  cmd_env.cpp  cmd_env.h  cmd_exec.cpp  cmd_exec.h  cmd_fdtrack.cpp  cmd_fdtrack.h  cmd_file.cpp  cmd_file.h  cmd_format_dump.h  cmd_getprop.cpp  cmd_getprop.h  cmd_hprof.cpp  cmd_hprof.h  cmd_ini.cpp  cmd_ini.h  cmd_linkmap.cpp  cmd_linkmap.h  cmd_logcat.cpp  cmd_logcat.h  cmd_method.cpp  cmd_method.h  cmd_mmap.cpp  cmd_mmap.h  cmd_plugin.cpp  (+35 more)
parser/command/android/: cmd_class.cpp  cmd_class.h  cmd_dex.cpp  cmd_dex.h  cmd_dumpsys.cpp  cmd_dumpsys.h  cmd_fdtrack.cpp  cmd_fdtrack.h  cmd_format_dump.h  cmd_getprop.cpp  cmd_getprop.h  cmd_hprof.cpp  cmd_hprof.h  cmd_logcat.cpp  cmd_logcat.h  cmd_method.cpp  cmd_method.h  cmd_print.cpp  cmd_print.h  cmd_reference.cpp  cmd_reference.h  cmd_search.cpp  cmd_search.h  cmd_space.cpp  cmd_space.h  cmd_top.cpp  cmd_top.h  verify.cpp  verify.h
parser/command/backtrace/: cmd_backtrace.cpp  cmd_backtrace.h  cmd_frame.cpp  cmd_frame.h
parser/command/core/: cmd_auxv.cpp  cmd_auxv.h  cmd_core.cpp  cmd_core.h  cmd_disassemble.cpp  cmd_disassemble.h  cmd_exec.cpp  cmd_exec.h  cmd_file.cpp  cmd_file.h  cmd_linkmap.cpp  cmd_linkmap.h  cmd_mmap.cpp  cmd_mmap.h  cmd_ptov.cpp  cmd_ptov.h  cmd_ptype.cpp  cmd_ptype.h  cmd_read.cpp  (+13 more)
parser/daemon/: server.cpp  server.h
parser/ui/: mini_shell.cpp  mini_shell.h  ui_thread.cpp  ui_thread.h
parser/work/: work_thread.cpp  work_thread.h
plugin/simple/: simple.cpp
script/: build.sh  build_android.sh  build_macos.sh  build_windows.sh  capstone.sh  capstone_macos.sh  xz-utils.sh  xz-utils_macos.sh
tests/: test.cpp  time.cpp
utils/backtrace/: callstack.cpp  callstack.h
utils/base/: macros.h  mem_map.cpp  mem_map.h  memory_map.cpp  memory_map.h  utils.cpp  utils.h
utils/logger/: log.cpp  log.h
utils/zip/: zip_entry.cpp  zip_entry.h  zip_file.cpp  zip_file.h
(+261 files in other folders)
